# stock_screener

./: .env.example  .gitignore  .impeccable.md  PLAN-FINAL.md  PLAN.md  Procfile  docker-compose.yml  fd13b66-recovery-action-plan.md  ok-now-i-need-snuggly-pinwheel.md  package.json  pnpm-lock.yaml  railway.toml  task.md  vercel.json
backend/: .dockerignore  Dockerfile  alembic.ini  benchmark_api_latency.py  benchmark_scoring_pipeline.py  check_schema.py  check_source_db.py  db_promotion_common.py  db_promotion_repair.py  ensure_pg_observability.py  nixpacks.toml  populate_kr_and_score.py  promote_local_to_neon.py  pyproject.toml  repair_promoted_database.py  targeted_score.py  test_insert.py  test_out.txt  timescale_prices_tuning.py  validate_db_promotion.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_security_master_fields.py  0003_widen_exchange_varchar.py  0004_add_platinum_conviction.py  0005_add_performance_indexes.py  0006_search_indexes_and_coverage_summary.py  0007_read_path_indexes.py  0008_hydration_jobs.py  0009_admin_backfill_runs.py  0010_watchlist.py  0011_repair_exchange_column.py  e6b28b19d844_add_userpushtoken.py
backend/app/: main.py
backend/app/api/: auth.py  deps.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  database.py  telemetry.py
backend/app/models/: __init__.py  alert.py  backfill_run.py  consensus_score.py  coverage_summary.py  etf.py  fundamental.py  hydration_job.py  institutional.py  instrument.py  market_regime.py  price.py  snapshot.py  strategy_score.py  user.py  watchlist_item.py
backend/app/schemas/: risk.py  v1.py
backend/app/services/: backfill_runs.py  hydration_jobs.py  request_cache.py  scoring_compute.py  scoring_context.py  strategy_score_bulk.py  symbol_resolution.py  taxonomy.py  universe.py
backend/app/services/alerts/: push.py
backend/app/services/ingestion/: freshness.py  kr_fundamental.py  kr_investor_flow.py  kr_price.py  us_fundamental.py  us_institutional.py  us_price.py
backend/app/services/korea/: chaebol_filter.py  sector_normalizer.py
backend/app/services/market_regime/: state_machine.py
backend/app/services/risk/: analyzer.py  concentration.py  position_sizer.py  stop_loss.py
backend/app/services/storage/: r2.py
backend/app/tasks/: alert_tasks.py  backfill_tasks.py  celery_app.py  hydration_tasks.py  ingestion_tasks.py  scoring_tasks.py  snapshot_tasks.py
backend/docs/: LOCAL_TO_NEON_PROMOTION.md  TIMESCALE_PRICES_TUNING.md
backend/tests/: conftest.py  test_admin_backfill.py  test_advanced_indicators.py  test_api_endpoints.py  test_backfill_tasks.py  test_backtest_validation.py  test_canslim_engine.py  test_consensus_engine.py  test_data_integrity_monitoring.py  test_db_promotion_safety.py  test_filters_endpoint.py  test_health.py  test_hydration_endpoints.py  test_hydration_jobs.py  test_hydration_worker_task.py  test_ingestion_tasks.py  test_instruments_endpoint.py  test_korea_verification.py  test_kr_fundamental_ingester.py  test_multi_timeframe.py  test_pattern_detector.py  test_scoring_tasks.py  test_search_and_coverage.py  test_strategy_engines.py  test_strategy_runners.py  test_strategy_score_bulk.py  test_us_fundamental_ingester.py  test_us_symbol_directory.py
backend/tests/load/: rankings.js
(+129 files in other folders)
