[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "consensus-platform"
version = "0.1.0"
description = "Multi-strategy consensus stock research platform (US + Korea)"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",          # Async PostgreSQL driver
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",   # Sync driver for Alembic migrations

    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",

    # US data — free
    "yfinance>=0.2.40",
    "edgartools>=2.25.0",       # SEC EDGAR XBRL
    "fredapi>=0.5.1",           # FRED risk-free rate

    # KR data — free
    "mojito2>=0.1.68",          # KIS Developers API wrapper
    "OpenDartReader>=0.2.1",    # OpenDART financials
    "FinanceDataReader>=0.9.50",# KR stock listings
    "pykrx>=1.0.45",            # KRX scraping (backup)

    # Technical analysis
    "pandas-ta>=0.3.14b",
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # HTTP
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",            # For TestClient
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
