[project]
name = "consensus-platform"
version = "0.1.0"
description = "Multi-strategy consensus stock research platform (US + Korea)"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",          # Async PostgreSQL driver
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",   # Sync driver for Alembic + Celery broker

    # Task queue (celery[sqlalchemy] uses PostgreSQL as broker — no Redis needed locally)
    "celery[sqlalchemy]>=5.4.0",
    "redis>=5.0.0",             # Optional: only needed for production Redis cache

    # US data — free
    "yfinance>=0.2.40",
    "edgartools>=2.25.0",       # SEC EDGAR XBRL
    "fredapi>=0.5.1",           # FRED risk-free rate

    # KR data — free
    "python-kis>=2.1.6",        # KIS Developers API wrapper (replaces mojito2)
    "OpenDartReader>=0.2.1",    # OpenDART financials
    "finance-datareader>=0.9.50",# KR stock listings
    "pykrx>=1.0.45",            # KRX scraping (backup)

    # Technical analysis
    "TA-Lib>=0.6.8",            # C bindings, 2-4x faster than pandas-ta, 200+ indicators
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # HTTP
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
